<resources>
    <string name="app_name">Knurder</string>
    <string name="menu_top_level_action_settings">Settings</string>
    <string name="ufo_logo">UFO logo</string>
    <string name="action_load_active">Refresh Active</string>
    <string name="action_load_tasted">Refresh Tasted</string>
    <string name="action_logon">Log On</string>
    <string name="action_logout">Log Out</string>
    <string name="action_change_location">Change Location</string>
    <string name="action_scan_glass_size">Scan the Menu</string>
    <string name="action_open_tasted_analytics">Tasted Analytics</string>
    <string name="action_rate_app">Rate This App</string>
    <string name="action_about">About</string>
    <string name="action_color">Test Color Picker</string>
    <string name="action_edit_query">Custom Query</string>
    <string name="action_send_untappd_url">Share Untappd URL</string>
    <string name="menu_top_level_action_about">
        <![CDATA[<p>You are running version %1$s.</p><p>I hope you like it (and rate highly it in the Play Store, if you would).
        I\'m interested in hearing if you were <b>surprised</b> by anything while using the app.
        That could mean you were thinking "I wish I could&#8230;", or sometimes means you thought it should work differently or maybe work at all!</p></p>
        When you report, please include the phone hardware type (ie Samsung xyz) you\'re running on, as much detail as you can (what you were doing at the time),
        the version number above, and if not obvious, what about it that was \'unexpected\'.  Thanks!  knurder.frog4food@recursor.net or www.facebook.com/ufoknurder<p>]]>
        </string>
    <string name="menu_top_level_action_untappd">
        <![CDATA[<p>It looks like you have scanned the Touchless menu and have quick access to untappd.</p>
        <p>Since this app is unofficial, I don\'t know what the URL\'s are for all stores.  If you\'d like to help out other patrons of The %1$s, you could
        share the URL via email with me, then I could build it into the app so the QR code scan would become unnecessary.
        <p>knurder.frog4food@recursor.net or www.facebook.com/ufoknurder<p>]]>
        </string>
    <string name="new_feature_alert_title">
        "EASY UNTAPPD CHECK INS"
    </string>
    <string name="new_feature_alert_message">
        <![CDATA[<p>This version of Knurder lets you pop over to \"Untappd\" to check-in your beer, or just see what members there are saying about the beer.</p><p>To open up Untappd, drill into a beer\'s detail page, if you see a price there, you can <b>long press the beer name.</b></p>]]>
    </string>
    <string name="new_feature_alert_title_alt">
        "NEW FEATURE: UNTAPPD"
    </string>
    <string name="new_feature_alert_message_alt">
        <![CDATA[<p>Some Saucer locations have listed their beer offerings on \"Untappd\", but the URL for the %1$s store isn\'t currently set.  You can try to scan the \'Touchless\' QR code (on the table at the pub) to get the ability to open the beer in Untappd, and also see price, glass size.</p>]]>
    </string>
    <string name="take_picture_title">
        "Take a Picture and Label Your Beer"
    </string>
    <string name="take_picture_instructions">
        <![CDATA[<p>Do you want to paste this beer description onto a picture of your beer?</p>
        <p>You select the kind of glassware you\'ll be taking a picture of, take a picture, position the description, and then you can save or share the labeled photo.</p>]]>
    </string>
    <string name="rate_beer_title">
        "Saving Your Ratings"
    </string>
    <string name="rate_beer_instructions_old">
        <![CDATA[<p>If you\'re a UFO member, by default, your ratings will be saved to the Saucer site next time you update your \'tasted\' list.  Once saved there, they are no longer editable.</p>
        <p>You can go into Knurder settings and set it so it does not upload, if you\'d like.</p>
        <p>But if you decide not to upload (or if you are not a UFO member), then the ratings are ONLY on your phone, so could be lost if you get a new phone.</p>
        <p>I just wanted to be sure you knew the deal.</p>]]>
    </string>
    <string name="rate_beer_instructions">
        <![CDATA[<p><At this point, the saucer site does not have the ability to save ratings any more.</p><p>The ratings are ONLY on your phone, so could be lost if you get a new phone.</p>
        <p>I just wanted to be sure you knew the deal.</p>]]>
    </string>
    <string name="position_title">
        "Multi-Touch Gestures"
    </string>
    <string name="position_instructions">
        <![CDATA[<p>You can move, rotate, enlarge, change the geometry, and change the color of the description text so that it looks like the description is actually pasted onto your beer glass.</p>
        <p>There are probably many combinations of glass shape and camera angle that just don\'t work, so if you\'d like to help make the app better, please find
        \'ufoknurder\' on FaceBook and share your experience or email me since I might be able to get your situation working better in a future release.</p> ]]>
    </string>
    <string name="shaker_title">
        "Shake For a Random Beer"
    </string>
    <string name="shaker_instructions">
        <![CDATA[<p>When you\'re looking at any list, you can <b>shake your phone</b> and a random beer will be selected for you!</p>]]>
    </string>
    <string name="onque_title">
        "Send Untasted in this List to the Bar"
    </string>
    <string name="onque_instructions_with_auth">
        <![CDATA[<p>If you\'d like, you can send this list to \`Brews-On-Queue\`.</p><p>They\'ve got it set up to require a separate authentication:<br>[<b>card number / pin</b>].<br>If you don\'t have that set-up, you can go to <i>tapthatapp.beerknurd.com</i>, and the pin you use will become your pin.</p><p>If you know your credentials, just hit the three dots menu (above) and select \'Send/Refresh Brews on Queue\'</p>]]>
    </string>
    <string name="onque_instructions">
        <![CDATA[<p>If you\'d like, you can send the untasted in this list to \`Brews-On-Queue\`.</p><p>It looks like you have the<br>[<b>card number / pin</b>] credentials set already so just hit the three dots menu (above) and select \'Send/Refresh Brews on Queue\'</p><p>For authentication issues, get it working on your web browser first at <i>tapthatapp.beerknurd.com</i></p>]]>
    </string>
    <string name="ocr_base_title">
        "Tap Menu Scanning 101"
    </string>
    <string name="ocr_base_instructions">
        <![CDATA[<p>You scan the QR code that the Saucer has put on the tables.  Knurder then knows where to go to get
        your Saucer\'s tap lineup details!  It\'s probably not going to be 100% perfect because
        the menu names aren\'t exactly the same as the web names and the beers in the menu might not align perfectly with the tap wall.</p>
        <p>If we successfully get menu information now, you\'ll have the opportunity to set it so you pull the menu data automatically in the future.</p>]]>
    </string>
    <string name="details_title">
        "Long Pressing"
    </string>
    <string name="details_instructions">
        <![CDATA[<p>Long press the <b>description text</b>, and you can flag/unflag this beer.</p><p>Long press the <b>beer name</b>,
        and you will be taken to this beer in Untappd (for tap beers where you see a glass size and price).</p>]]>
    </string>
    <string name="pref_title_dark_mode_setting">Dark Theme</string>
    <string name="pref_description_dark_mode_setting">Display dark page backgrounds with light lettering rather than white page backgrounds
    </string>
    <string name="pref_title_hide_mix_setting">Hide Mixes</string>
    <string name="pref_description_hide_mix_setting">Hide "Mix" items in draught lists
    </string>
    <string name="pref_title_hide_flight_setting">Hide Flights</string>
    <string name="pref_description_hide_flight_setting">Hide "Flight" items in draught lists
    </string>
    <string name="pref_title_save_password_setting">Save Password</string>
    <string name="pref_description_save_password_setting">Save the password locally for convenience at the minor cost of being less secure
    </string>
    <string name="pref_title_save_pin_setting">Save PIN</string>
    <string name="pref_description_save_pin_setting">Save the PIN locally for convenience at the minor cost of being less secure
    </string>
    <string name="pref_title_legacy_buttons_setting">Hide Legacy Buttons</string>
    <string name="pref_description_legacy_buttons_setting">Hide the legacy beer list buttons, leaving only the icon-based list button.
    </string>
    <string name="pref_title_current_beers_setting">Show Current Plate Tasted</string>
    <string name="pref_description_current_beers_setting">Show only tasted on your current plate, not from older plates.
    </string>
    <string name="pref_title_allow_pictures_setting">Allow Pictures</string>
    <string name="pref_description_allow_pictures_setting">Show the camera icon so you can paste beer descriptions on photos and also use the camera to scan the menu.
    </string>
    <string name="pref_title_synch_reviews_setting">Upload Reviews</string>
    <string name="pref_description_synch_reviews_setting">Post the reviews you type in here to the UFO site. They are NOT EDITABLE after posting!
    </string>
    <string name="pref_title_hide_ubereats_setting">Hide Food Delivery Button</string>
    <string name="pref_description_hide_ubereats_setting">Do not show the button that takes you to the food delivery web page.
    </string>
    <string name="pref_title_automatic_untappd_setting">Automatically Pull Prices</string>
    <string name="pref_description_automatic_untappd_setting">Retrieve prices and glass sizes every time the beer list is refreshed. Requires scanning the Touchless QR code on the table at the restaurant.
    </string>
    <string name="pref_title_reset_tutorials_setting">Reset Help Preferences</string>
    <string name="pref_description_reset_tutorials_setting">Reset help screen preferences so they show up again.
    </string>
    <string name="prompt_username">Username or e-mail address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in to get your tasted list</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="store_selection">Your Saucer</string>
    <string name="container_selection">Container Selection</string>
    <string name="taps">Taps</string>
    <string name="mixes">Mixes</string>
    <string name="flights">Flights</string>
    <string name="bottles">Bottles</string>
    <string name="all">ALL</string>
    <string name="region_selection">Region Selection</string>
    <string name="local">Local</string>
    <string name="not_local">Not Local</string>
    <string name="tasted_selection">Tasted Selection</string>
    <string name="tasted">Tasted</string>
    <string name="not_tasted">Not Tasted</string>
    <string name="knurder_favorite_selection">Knurder Favorite Selection</string>
    <string name="flagged">Flagged</string>
    <string name="not_flagged">Not Flagged</string>
    <string name="go">Go</string>
    <string name="action_share">Share This List</string>
    <string name="action_sort_name">Sort by Name</string>
    <string name="action_sort_style">Sort by Style</string>
    <string name="action_sort_abv">Sort by ABV</string>
    <string name="action_sort_glass">Sort by Glass Size</string>
    <string name="action_sort_price">Sort by Price</string>
    <string name="action_push_to_brews_on_queue">Send/Refresh Brews on Queue</string>
</resources>