<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="dark_mode_switch"
        android:summary="@string/pref_description_dark_mode_setting"
        android:title="@string/pref_title_dark_mode_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="mix_switch"
        android:summary="@string/pref_description_hide_mix_setting"
        android:title="@string/pref_title_hide_mix_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="flight_switch"
        android:summary="@string/pref_description_hide_flight_setting"
        android:title="@string/pref_title_hide_flight_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="password_switch"
        android:summary="@string/pref_description_save_password_setting"
        android:title="@string/pref_title_save_password_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="pin_switch"
        android:summary="@string/pref_description_save_pin_setting"
        android:title="@string/pref_title_save_pin_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="legacy_button_switch"
        android:summary="@string/pref_description_legacy_buttons_setting"
        android:title="@string/pref_title_legacy_buttons_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="current_beers_switch"
        android:summary="@string/pref_description_current_beers_setting"
        android:title="@string/pref_title_current_beers_setting" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="allow_external_picture_storage_switch"
        android:summary="@string/pref_description_allow_pictures_setting"
        android:title="@string/pref_title_allow_pictures_setting"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="upload_reviews_switch"
        android:summary="@string/pref_description_synch_reviews_setting"
        android:title="@string/pref_title_synch_reviews_setting"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="hide_ubereats_switch"
        android:summary="@string/pref_description_hide_ubereats_setting"
        android:title="@string/pref_title_hide_ubereats_setting"/>

    <SwitchPreference
        android:defaultValue="false"
        android:key="automatic_untappd_switch"
        android:summary="@string/pref_description_automatic_untappd_setting"
        android:title="@string/pref_title_automatic_untappd_setting"/>

    <Preference
        android:key="reset_tutorials_button"
        android:summary="@string/pref_description_reset_tutorials_setting"
        android:title="@string/pref_title_reset_tutorials_setting"
        android:widgetLayout="@layout/pref_reset_help"/>

</PreferenceScreen>
