<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sengsational.knurder.QueryCheckboxActivity"
    android:layout_centerHorizontal="true"
    android:layout_alignParentTop="true"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical"
    android:gravity="top"
    android:weightSum="1">

    <GridLayout
        android:id="@+id/containerGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:text="@string/container_selection"
            android:textSize="20sp"
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/containerTextView"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taps"
            android:id="@+id/tapsCb"
            android:layout_row="1"
            android:layout_column="0"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mixes"
            android:id="@+id/mixesCb"
            android:layout_row="1"
            android:layout_column="1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flights"
            android:id="@+id/flightsCb"
            android:layout_row="1"
            android:layout_column="2"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottles"
            android:id="@+id/bottlesCb"
            android:layout_row="1"
            android:layout_column="3"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/allContainerCb"
            android:layout_row="1"
            android:layout_column="4"/>

    </GridLayout>

    <GridLayout
        android:id="@+id/xcontainerGrid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="10"
        android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:text="@string/region_selection"
            android:textSize="20sp"
            android:layout_row="0"
            android:paddingTop="16dp"
            android:layout_column="0"
            android:id="@+id/regionGrid"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local"
            android:id="@+id/localCb"
            android:layout_row="1"
            android:layout_column="0"
            android:checked="false"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_local"
            android:id="@+id/notLocalCb"
            android:layout_row="1"
            android:layout_column="1"
            android:checked="false"/>

        <CheckBox
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/allRegionCb"
            android:layout_row="1"
            android:layout_column="8"
            android:checked="false"
            android:layout_columnSpan="2"/>
    </GridLayout>
    <GridLayout
        android:id="@+id/xcontainerGrid3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:text="@string/tasted_selection"
            android:textSize="20sp"
            android:layout_row="0"
            android:paddingTop="16dp"
            android:layout_column="0"
            android:id="@+id/tastedGrid"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasted"
            android:id="@+id/tastedCb"
            android:layout_row="1"
            android:layout_column="0"
            android:checked="false"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_tasted"
            android:id="@+id/notTastedCb"
            android:layout_row="1"
            android:layout_column="1"
            android:checked="false"/>

        <CheckBox
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/allTastedCb"
            android:layout_row="1"
            android:layout_column="5"
            android:checked="false"/>
    </GridLayout>
    <GridLayout
        android:id="@+id/xcontainerGrid4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="6"
        android:rowCount="3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:text="@string/knurder_favorite_selection"
            android:textSize="20sp"
            android:layout_row="0"
            android:paddingTop="16dp"
            android:layout_column="0"
            android:id="@+id/knurderFavoriteGrid"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flagged"
            android:id="@+id/flaggedCb"
            android:layout_row="1"
            android:layout_column="0"
            android:checked="false"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_flagged"
            android:id="@+id/notFlaggedCb"
            android:layout_row="1"
            android:layout_column="1"
            android:checked="false"/>

        <CheckBox
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/allFlaggedCb"
            android:layout_row="1"
            android:layout_column="5"
            android:checked="false"/>
    </GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        android:id="@+id/queryGoButton"
        android:layout_gravity="center_horizontal"
        />
    <!--

    <GridLayout
        android:id="@+id/regionGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="5"
        android:rowCount="2"
        android:layout_below="@+id/containerGrid">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="4"
            android:layout_gravity="left"
            android:text="Region Selection"
            android:paddingTop="10dp"
            android:textSize="20dp"
            android:layout_row="0"
            android:layout_column="0"
            android:id="@+id/regionTextView"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Local"
            android:id="@+id/localCb"
            android:layout_row="1"
            android:layout_column="0"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Non-Local"
            android:id="@+id/nonLocalCb"
            android:layout_row="1"
            android:layout_column="1"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ALL"
            android:id="@+id/allRegionCb"
            android:layout_row="1"
            android:layout_column="4"/>


    </GridLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="left"
        android:paddingTop="10dp"
        android:text="Tasted Selection"
        android:textSize="20dp"
        android:layout_row="5"
        android:layout_column="0"
        android:id="@+id/tastedTextView"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Local"
        android:id="@+id/localxCb"
        android:layout_row="6"
        android:layout_column="0"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnSpan="4"
        android:layout_gravity="left"
        android:text="Knurder Favorite Selection"
        android:paddingTop="10dp"
        android:textSize="20dp"
        android:layout_row="7"
        android:layout_column="0"
        android:id="@+id/knurderFavoriteTextView"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Local"
        android:id="@+id/localxxCb"
        android:layout_row="8"
        android:layout_column="0"/>

-->
</LinearLayout>
